[gd_scene load_steps=3 format=3 uid="uid://crpuxjt4cjei7"]

[ext_resource type="Script" path="res://scripts/challenge4.gd" id="1_pa2vb"]
[ext_resource type="PackedScene" uid="uid://cjk8iulp0ax2q" path="res://scenes/MyOptBtn.tscn" id="2_al3oo"]

[node name="Challenge" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2, -1)
script = ExtResource("1_pa2vb")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.00817e-06, 0.474507, 0.11392, 1)
metadata/_edit_lock_ = true

[node name="CodeEdit" type="CodeEdit" parent="ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 15
text = "#include <stdio.h>
int main(void)  {
	int jardim[10][10];
	for (int i = 0;                i++)
	{
    	 for (int j = 0;                j++)
     	{
        	if (           ) jardim[i][j] = flor_branca;
        	if (           ) jardim[i][j] = flor_vermelha;
        	if (           ) jardim[i][j] = flor_amarela;
     	}
	}
}"
editable = false
gutters_draw_line_numbers = true
metadata/_edit_lock_ = true

[node name="FstIfOpt" parent="ColorRect/CodeEdit" instance=ExtResource("2_al3oo")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 97.0
offset_top = 156.0
offset_right = 97.0
offset_bottom = 156.0
font_size = 14

[node name="ScndIfOpt" parent="ColorRect/CodeEdit" instance=ExtResource("2_al3oo")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 97.0
offset_top = 180.0
offset_right = 97.0
offset_bottom = 180.0
font_size = 14

[node name="ThrdIfOpt" parent="ColorRect/CodeEdit" instance=ExtResource("2_al3oo")]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 97.0
offset_top = 204.0
offset_right = 97.0
offset_bottom = 204.0
font_size = 14

[node name="InForOpt" parent="ColorRect/CodeEdit" instance=ExtResource("2_al3oo")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 154.0
offset_top = 112.0
offset_right = 154.0
offset_bottom = 112.0
grow_horizontal = 1
grow_vertical = 1
font_size = 14

[node name="OutForOpt" parent="ColorRect/CodeEdit" instance=ExtResource("2_al3oo")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 137.0
offset_top = 69.0
offset_right = 137.0
offset_bottom = 69.0
grow_horizontal = 1
grow_vertical = 1
font_size = 14

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CodeEdit"]
layout_mode = 1
offset_left = 18.0
offset_top = 295.0
offset_right = 518.0
offset_bottom = 720.0
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Aviso" type="Label" parent="ColorRect/CodeEdit/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0, 0, 1)
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/CodeEdit/VBoxContainer/Aviso"]
show_behind_parent = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Btns" type="HBoxContainer" parent="ColorRect/CodeEdit/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 300
metadata/_edit_lock_ = true

[node name="RunBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
unique_name_in_owner = true
layout_mode = 2
text = "Run Code"
metadata/_edit_lock_ = true

[node name="CloseBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ColorRect/CodeEdit/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Bem vindo ao desafio 5!
Neste desafio, você deve completar os campos de condição e iteração do laço ‘for’ nas linhas 4 e 6 (condição e iteração). O objetivo é preencher uma matriz ‘jardim’ de 10 linhas e 10 colunas com três tipos de flores: brancas, vermelhas e amarelas. As flores brancas devem ser plantadas na diagonal principal da matriz. As flores amarelas devem ocupar o canto superior direito da matriz, e as vermelhas devem preencher  todas as posições restantes na matriz.
Boa sorte!"
autowrap_mode = 3
metadata/_edit_lock_ = true

[connection signal="option_selected" from="ColorRect/CodeEdit/FstIfOpt" to="." method="_on_fst_if_opt_option_selected"]
[connection signal="option_selected" from="ColorRect/CodeEdit/ScndIfOpt" to="." method="_on_scnd_if_opt_option_selected"]
[connection signal="option_selected" from="ColorRect/CodeEdit/ThrdIfOpt" to="." method="_on_thrd_if_opt_option_selected"]
[connection signal="option_selected" from="ColorRect/CodeEdit/InForOpt" to="." method="_on_in_for_opt_option_selected"]
[connection signal="option_selected" from="ColorRect/CodeEdit/OutForOpt" to="." method="_on_out_for_opt_option_selected"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/RunBtn" to="." method="_on_run_btn_pressed"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/CloseBtn" to="." method="_on_close_btn_pressed"]
